--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
 <body>
 <%= render 'layouts/header.html.erb' %>
 <div class="container">
+	
+	<% flash.each do |name, msg| %>
+	<%= content_tag(:div, msg, class: "asert alert-#{name}") %>
+	<% end %>
 <%= yield %>
 
 <%= render 'layouts/footer.html.erb' %></div>
