--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#">One Month Rails</a>
+      <% link_to "One Month Rails" , root_path, class: "brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -26,8 +27,12 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Login", '#' %></li>
-        
+        <% if user_signed_in? %>
+        <li><%= link_to "Edit Profile", edit_user_registration_path  %></li>
+        <li><%= link_to "Logout", destroy_user_session_path, method: :delete  %></li>
+        <% else %>
+        <li><%= link_to "Login", new_user_session_path %></li>
+        <% end %>
           
           </ul>
         </li>
