--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,10 @@
+<% if user_signed_in? %>
+<h1>You're logged in!</h1>
+<% else %>
+
+
+
+
 <div class="jumbotron">
 <h1>Welcome to One Month Rails!</h1>
 <p>You've found the home page for the <%=link_to "One Month Rails", "http://onemonthrails.com"%> application. </p>
@@ -9,4 +16,4 @@
 
 </div>
 
-
+<% end %>
